--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "^7.0.0",
     "broker-factory": "^1.3.4",
     "fast-unique-numbers": "^2.1.1",
     "recorder-audio-worklet-processor": "^1.0.10",
