fix(package): update husky config

--- a/package.json
+++ b/package.json
@@ -68,6 +68,12 @@
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/recorder-audio-worklet",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
+      "pre-commit": "grunt lint"
+    }
+  },
   "license": "MIT",
   "main": "build/es5/bundle.js",
   "module": "build/esm/module.js",
@@ -77,8 +83,6 @@
     "url": "https://github.com/chrisguttandin/recorder-audio-worklet.git"
   },
   "scripts": {
-    "commitmsg": "commitlint --edit --extends @commitlint/config-angular",
-    "precommit": "grunt lint",
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
   },
