--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rollup-plugin-babel": "^4.0.3",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
+    "terser-webpack-plugin": "^1.1.0",
     "ts-loader": "^5.2.1",
     "tsconfig-holy-grail": "^6.0.12",
     "tslint": "^5.11.0",
