--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^7.2.0",
     "@commitlint/config-angular": "^7.1.2",
+    "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "commitizen": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
