--- a/package.json
+++ b/package.json
@@ -65,9 +65,8 @@
     "webpack": "^4.20.2"
   },
   "files": [
-    "build/es2015/",
+    "build/es2018/",
     "build/es5/",
-    "build/esm/",
     "src/"
   ],
   "homepage": "https://github.com/chrisguttandin/recorder-audio-worklet",
@@ -79,7 +78,7 @@
   },
   "license": "MIT",
   "main": "build/es5/bundle.js",
-  "module": "build/esm/module.js",
+  "module": "build/es2018/module.js",
   "name": "recorder-audio-worklet",
   "repository": {
     "type": "git",
@@ -89,6 +88,6 @@
     "prepublishOnly": "grunt build",
     "test": "grunt lint && grunt test"
   },
-  "types": "build/es2015/module.d.ts",
+  "types": "build/es2018/module.d.ts",
   "version": "2.0.4"
 }
