build(config): update husky config

--- a/package.json
+++ b/package.json
@@ -70,12 +70,6 @@
         "src/"
     ],
     "homepage": "https://github.com/chrisguttandin/recorder-audio-worklet",
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
-            "pre-commit": "pretty-quick --config config/prettier/config.json --staged && grunt lint"
-        }
-    },
     "license": "MIT",
     "main": "build/es5/bundle.js",
     "module": "build/es2019/module.js",
@@ -85,6 +79,7 @@
         "url": "https://github.com/chrisguttandin/recorder-audio-worklet.git"
     },
     "scripts": {
+        "prepare": "husky install",
         "prepublishOnly": "grunt build",
         "test": "grunt lint && grunt test"
     },
